syntax = "proto3";

package user.api;
option go_package = "user";

import "third_party/google/api/annotations.proto";

service User {
    rpc SignUp (SignUpRequest) returns (SignUpResponse) { // 注册
        option (google.api.http) = {
            post: "/user/signup",
            body: "*"
        };
    }
    rpc SignIn (SignInRequest) returns (SignInResponse) {
      option (google.api.http) = {
        post: "/user/signin",
        body: "*"
    };
    }  // 登陆
    rpc SignOut (SignOutRequest) returns (SignOutResponse) {
      option (google.api.http) = {
        post: "/user/signout",
        body: "*"
    };
    } // 登出
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {
      option (google.api.http) = {
        post: "/user/getUser",
        body: "*"
    };
    }  // 获取用户详情
    rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {
      option (google.api.http) = {
        post: "/user/getUsers",
        body: "*"
    };
    }  // 批量获取用户详情


    // rpc GetUsers () returns () {}  // 修改用户角色

    // rpc GetUsers () returns () {}  // 添加权限

    // rpc GetUsers () returns () {}  // 删除权限
}

message SignUpRequest {
  string account_name  = 1;
  string account_email  = 2;
  string account_password  = 3;

}
message SignUpResponse {
  int64 error = 1;
  string errmsg = 2;
  bool data = 3;
}

message SignInRequest {
  string account_name  = 1;
  string account_password  = 2;
}

message SignInResponse {
  int64 error = 1;
  string errmsg = 2;
  UserInfo data = 3;
}

message SignOutRequest {
  string account_name  = 1;
}
message SignOutResponse {
  int64 error = 1;
  string errmsg = 2;
  message data {
    bool res = 1;
  }
}

message GetUserRequest {
  string account_id  = 1;
  string account_name  = 2;
  string account_email  = 3;
  string account_role  = 4;
  string create_time  = 5;
  string update_time  = 6;
}
message GetUserResponse {
  int64 error = 1;
  string errmsg = 2;
  UserInfo data = 3;
}

message GetUsersRequest {
  repeated string account_id  = 1;
  repeated string account_name  = 2;
  repeated string account_email  = 3;
  repeated string account_role  = 4;
  repeated string create_time  = 5;
  repeated string update_time  = 6;
}
message GetUsersResponse {
  int64 error = 1;
  string errmsg = 2;
  repeated UserInfo data = 3;
}

message UserInfo {
  int64 id  = 1;
  string account_id  = 2;
  string account_name  = 3;
  string account_email  = 4;
  string account_role  = 5;
  string create_time  = 6;
  string update_time  = 7;
}
