syntax = "proto3";

package user.api;
option go_package = "user";

service User {
  rpc Add (AddRequest) returns (AddResponse) {};
  rpc Delete (DeleteRequest) returns (DeleteResponse) {};
  rpc Update (UpdateRequest) returns (UpdateResponse) {};
  rpc Get (GetRequest) returns (GetResponse) {};
  rpc Gets (GetsRequest) returns (GetsResponse) {};
  rpc VerifyPassword (VerifyPasswordRequest) returns (VerifyPasswordResponse) {};
}

message AddRequest {
  string username  = 1;
  string email  = 2;
  string password  = 3;
  uint64 role_id  = 4;
  uint64 status  = 5;
  uint64 is_delete  = 6;
}
message AddResponse {
  int64 errno = 1;
  string errmsg = 2;
  UserResponseInfo data = 3; 
}

message DeleteRequest {
  string user_id  = 1;
}
message DeleteResponse {
  int64 errno = 1;
  string errmsg = 2;
  bool data = 3; 
}

message UpdateRequest {
  string user_id = 1;         // 选择条件
  string username = 2;        // 更细字段
  string email = 3;           // 更细字段        
  string password = 4;        // 更细字段
  uint64 role_id = 5;            // 更细字段
  uint64 status = 6;          // 更细字段
  uint64 is_delete = 10;      // 更细字段
}
message UpdateResponse {
  int64 errno = 1;
  string errmsg = 2;
  bool data = 3; 
}

message GetRequest {
  string user_id = 1;
  string username = 2;
  string email = 3;
  uint64 role_id = 4;
  uint64 status = 5;
  uint64 is_delete = 6;
  string create_time = 7;
  string update_time = 8;
}
message GetResponse {
  int64 errno = 1;
  string errmsg = 2;
  repeated UserResponseInfo data = 3; 
}

message GetsRequest {
  repeated string user_ids = 1;
  string username = 2;
  string email = 3;
  uint64 role_id = 4;
  uint64 status = 5;
  uint64 is_delete = 6;
  string create_time = 7;
  string update_time = 8;
}
message GetsResponse {
  int64 errno = 1;
  string errmsg = 2;
  repeated UserResponseInfo data = 3; 
}

message VerifyPasswordRequest {
  string username = 1;
  string password = 2;
  string email = 3;   // todo support
}
message VerifyPasswordResponse {
  int64 errno = 1;
  string errmsg = 2;
  UserResponseInfo data = 3;
}


message UserResponseInfo {
  uint64 id = 1;
  string user_id = 2;
  string username = 3;
  string email = 4;
  uint64 role_id = 5;
  uint64 status = 6;
  uint64 is_delete = 7;
  string create_time = 8;
  string update_time = 9;
}